# gard-rust-cli

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  gard-plan.md  rustfmt.toml
.cargo/: config.toml
.claude/commands/: pr-review-apply.md  push.md  review.md
.claude/rules/: branch-workflow.md  commit-convention.md
.claude/skills/finalize-pr/: SKILL.md
.cursor/commands/: commit.md  pr-description.md
.cursor/rules/: rust-conventions.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml  stale.yml
crates/gard-cli/: Cargo.toml
crates/gard-cli/src/: main.rs
crates/gard-core/: Cargo.toml
crates/gard-core/src/: config.rs  error.rs  lib.rs  manifest.rs  types.rs
crates/gard-git/: Cargo.toml
crates/gard-git/src/: ci.rs  diff.rs  hook.rs  lib.rs
crates/gard-pkg/: Cargo.toml
crates/gard-pkg/src/: lib.rs  manifest_diff.rs  scorer.rs  tier1_osv.rs  tier2_meta.rs  tier3_analyzer.rs
crates/gard-pkg/tests/: integration.rs
crates/gard-report/: Cargo.toml
crates/gard-report/src/: json.rs  lib.rs  sarif.rs  terminal.rs
