[package]
name              = "gard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description       = "AI-era package security gate — Sign what you commit. Guard what you ship."
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace   = true
rust-version.workspace = true

[[bin]]
name = "gard"
path = "src/main.rs"

[dependencies]
gard-core   = { workspace = true }
gard-pkg    = { workspace = true }
gard-git    = { workspace = true }
gard-report = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
console            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
