[package]
name              = "gard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description       = "Core types, config, and manifest for gard"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
chrono     = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
