[package]
name              = "gard-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description       = "3-tier package detection engine for gard (OSV, metadata, source analysis)"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gard-core  = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
ignore     = { workspace = true }
regex      = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tempfile = "3"
